--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -7,7 +7,7 @@
   --vt-c-black: #181818;
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
-
+  --primary: #012d78;
   --vt-c-indigo: #2c3e50;
 
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
@@ -62,7 +62,7 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: #012d78;
+  background: var(--primary);
   transition:
     color 0.5s,
     background-color 0.5s;
